--- a/values.yaml
+++ b/values.yaml
@@ -79,9 +79,8 @@ syft-generator-chart:
     storageUrl: "http://sbomer-release-manifest-storage-service-chart:8080"
 
 # ui, configure to point to sbomer-service
-ui-chart:
-  extraEnv:
-  - name: API_URL
+ui-chart:  
+  config:
     # note: ui is not adapted to work with sbom-service yet
     # override to connect to backend of your choice
-    value: "http://localhost:8080"
+    apiUrl: http://localhost:8081
