--- a/values.yaml
+++ b/values.yaml
@@ -44,6 +44,7 @@ infra:
     image: quay.io/minio/minio:latest
     rootUser: minioadmin
     rootPassword: minioadmin
+    bucket: sbomer-storage
     service:
       apiPort: 9000
       consolePort: 9001
@@ -84,9 +85,7 @@ manifest-storage-service-chart:
     # S3 storage configuration
     s3:
       endpoint: "http://sbomer-release-minio:9000"
-      accessKeyId: "minioadmin"
-      secretAccessKey: "minioadmin"
-      bucket: "sboms"
+      existingSecret: "sbomer-release-minio-secret"
       pathStyleAccess: "true"
       region: "us-east-1"
 
